SERVER-71787 Balancer needs to attach forceJumbo to `moveRange` command